# patch-convolutional-vision-transformer

./: .gitignore  Untitled.ipynb  prerequisites.txt  train.py
database/test/: 0.txt  1.txt  2.txt  3.txt
database/train/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
memorybank/: Snow overlay.00_32_20_26.Still010.txt  Snow overlay.00_32_22_20.Still011.txt  Snow overlay.00_32_31_15.Still012.txt  Snow overlay.00_32_33_05.Still013.txt  Snow overlay.00_32_37_02.Still014.txt  Snow overlay.00_32_42_06.Still015.txt  Snow overlay.00_32_47_13.Still016.txt  Snow overlay.00_32_55_17.Still017.txt  Snow overlay.00_33_01_07.Still018.txt  Snow overlay.00_33_10_11.Still019.txt  Snow overlay.00_33_16_02.Still020.txt  Snow overlay.00_33_17_18.Still021.txt  Snow overlay.00_34_09_21.Still022.txt  Snow overlay.00_34_19_11.Still023.txt  Snow overlay.00_34_27_28.Still024.txt
patchcvt_inference/: CMakeLists.txt
patchcvt_inference/camera/: camera.cpp  camera.h
patchcvt_inference/inference/: inference.cpp  inference.h
patchcvt_inference/src/: main.cpp
patchcvt_inference/test/: test.cpp  test.hpp
scripts/: extract_frames_from_video.py  list_all_folders.py
